# KincadeCore-Evaluation-Access

./: .gitignore  README.md  kill_kincade_servers.sh  start_kincade_servers.sh  verify_live_kincadecore.sh  verify_saved_receipt.sh
api_contract/: evaluate_api_contract.md
evaluation_api/: README.md  evaluation_api.py
external_summary/: EVALUATION_RUNBOOK.md  PAYMENT_VERIFICATION_SUMMARY.md
fixtures/: evaluate_request_demo.json  evaluate_response_demo.json  payment_review_demo.json
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
product_notes/: NEXT_PRODUCT_STEPS.md
verification_artifacts/: README.md  REQUEST_BOUND_VERIFICATION.md  image_id.json  journal.json  live_journal.json
verification_artifacts/records/: kc_req_demo_001.json
